--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -4,9 +4,14 @@ on:
   workflow_call:
     inputs:
       name:
-        description: 'image name'
-        required: true
         type: string
+        required: true
+        description: 'image name'
+      push:
+        type: boolean
+        required: false
+        default: false
+        description: 'push image'
 
 jobs:
   docker:
@@ -47,7 +52,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           platforms: linux/amd64,linux/arm64
-          push: true
+          push: ${{ inputs.push }}
           tags: ${{ steps.meta.outputs.tags }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
